2005-05-12  Derek Price  <derek@ximbiot.com>

	* glob.c, glob_.h: Misc improvements suggested by Paul Eggert, bringing
	these files closer to their glibc sources.  Simplify & reorganize for
	clarity.  Use protos.
	(glob_in_dir): Fix GLOB_ONLYDIR bug/typo.

2005-05-11  Derek Price  <derek@ximbiot.com>

	* .cvsignore: Ignore glob.h.
	* Makefile.am (BUILT_SOURCES, EXTRA_DIST, MOSTLYCLEANFILES): Add glob
	files.
	(glob.h): New target.
	* glob.c, glob_.h: New files.
	* strdup.c, strdup.h: New files from GNULIB.

2005-05-09  Conrad T. Pino  <Conrad@Pino.com>

	* libcvs.dep, libcvs.mak: Regenerated after Windows full rebuild.

2005-05-08  Mark D. Baushke  <mdb@cvshome.org>

	* libcvs.dsp: unistd-safer.h is in lib, not windows-NT.
	* libcvs.dep: Regenerate.

2005-05-07  Mark D. Baushke  <mdb@cvshome.org>

	* libcvs.dep: Use a relative path for unistd-safer.h.

	* libcvs.dsp: Update from GNULIB.
	Add files dup-safer.c, fd-safer.c, and unistd-safer.h.
	* libcvs.dep, libcvs.mak: Regenerate.

2005-05-03  Derek Price  <derek@ximbiot.com>

	Update from GNULIB.
	* chdir-long.c, nanosleep.c, save-cwd.c, tempname.c: Updated.
	* dup-safer.c, fd-safer.c, unistd-safer.h: New files.

2005-05-01  Mark D. Baushke  <mdb@cvshome.org>

	* regex.c: Update from GNULIB.

2005-04-25  Derek Price  <derek@ximbiot.com>

	* getdate.y: Update from GNULIB.

2005-04-15  Derek Price  <derek@ximbiot.com>

	* Makefile.am (DISTCLEANFILES): Add getdate.log.
	* .cvsignore: Ditto.
	* test-getdate.sh: Add new tests.
	(verify, skip, valid_timezone): New functions.

2005-04-12  Derek Price  <derek@ximbiot.com>

	* getdate.y: Update from GNULIB.

2005-04-06  Derek Price  <derek@ximbiot.com>

	* getdate.y: Update from GNULIB.

2005-04-03  Mark D. Baushke  <mdb@cvshome.org>

	* strtol.c: Update from GNULIB.

2005-03-29  Mark D. Baushke  <mdb@cvshome.org>

	* mktime.c, strftime.c: Update from GNULIB.

2005-03-23  Derek Price  <derek@ximbiot.com>
