@@ -1,3 +1,8 @@
+2005-05-13  Derek Price  <derek@ximbiot.com>
+
+	* glob.c, glob_.h: Misc cleanup for compatibility with GNULIB & glibc,
+	mostly suggested by Paul Eggert <eggert@cs.ucla.edu>.
+
 2005-05-12  Derek Price  <derek@ximbiot.com>
 
 	* glob.c, glob_.h: Misc improvements suggested by Paul Eggert, bringing
